--- a/mddapi/pom.xml
+++ b/mddapi/pom.xml
@@ -128,6 +128,15 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.5.0</version>
+				<configuration>
+					<source>21</source>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
